{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 38,
  "lineage": "3fa4df04-b171-5736-8c12-00b13e4f8c01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092da226940102abc",
            "arn": "arn:aws:ec2:ap-south-1:990723917819:elastic-ip/eipalloc-092da226940102abc",
            "association_id": "eipassoc-09915d2a08f9d9dcf",
            "domain": "vpc",
            "id": "eipalloc-092da226940102abc",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-00475386ae348d15e",
            "private_dns": "ip-10-0-1-187.ap-south-1.compute.internal",
            "private_ip": "10.0.1.187",
            "public_dns": "ec2-13-126-211-111.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.211.111",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "Student_registration-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Student_registration-nat-eip",
              "Project": "Student_registration"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "eipalloc-092da226940102abc",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:990723917819:internet-gateway/igw-03fffb2259209d367",
            "id": "igw-03fffb2259209d367",
            "owner_id": "990723917819",
            "region": "ap-south-1",
            "tags": {
              "Name": "Student_registration-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Student_registration-igw",
              "Project": "Student_registration"
            },
            "vpc_id": "vpc-051add420dbcc48ed"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "igw-03fffb2259209d367",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092da226940102abc",
            "association_id": "eipassoc-09915d2a08f9d9dcf",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-08d6f6b5a65840d1d",
            "network_interface_id": "eni-00475386ae348d15e",
            "private_ip": "10.0.1.187",
            "public_ip": "13.126.211.111",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bf7c475744e9acf8",
            "tags": {
              "Name": "Student_registration-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Student_registration-nat",
              "Project": "Student_registration"
            },
            "vpc_id": "vpc-051add420dbcc48ed"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "nat-08d6f6b5a65840d1d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:990723917819:route-table/rtb-068a039d956b67651",
            "id": "rtb-068a039d956b67651",
            "owner_id": "990723917819",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d6f6b5a65840d1d",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Student_registration-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Student_registration-private-rt",
              "Project": "Student_registration"
            },
            "timeouts": null,
            "vpc_id": "vpc-051add420dbcc48ed"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "rtb-068a039d956b67651",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:990723917819:route-table/rtb-0ef401543fa9c5aba",
            "id": "rtb-0ef401543fa9c5aba",
            "owner_id": "990723917819",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03fffb2259209d367",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Student_registration-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Student_registration-public-rt",
              "Project": "Student_registration"
            },
            "timeouts": null,
            "vpc_id": "vpc-051add420dbcc48ed"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "rtb-0ef401543fa9c5aba",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f1ccd3303848e16",
            "region": "ap-south-1",
            "route_table_id": "rtb-068a039d956b67651",
            "subnet_id": "subnet-04ddab36424be6f1c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "rtbassoc-02f1ccd3303848e16",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f57003cc0cdd45a",
            "region": "ap-south-1",
            "route_table_id": "rtb-068a039d956b67651",
            "subnet_id": "subnet-0e6488de495c2b949"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "rtbassoc-06f57003cc0cdd45a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088d7e97d42e0d4a6",
            "region": "ap-south-1",
            "route_table_id": "rtb-068a039d956b67651",
            "subnet_id": "subnet-022a9d4961a44bc6b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "rtbassoc-088d7e97d42e0d4a6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b35e575317ced838",
            "region": "ap-south-1",
            "route_table_id": "rtb-0ef401543fa9c5aba",
            "subnet_id": "subnet-0bf7c475744e9acf8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "rtbassoc-0b35e575317ced838",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0674b03728705c9d1",
            "region": "ap-south-1",
            "route_table_id": "rtb-0ef401543fa9c5aba",
            "subnet_id": "subnet-08edc35a1e9c188e0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "rtbassoc-0674b03728705c9d1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca027a5f69be437b",
            "region": "ap-south-1",
            "route_table_id": "rtb-0ef401543fa9c5aba",
            "subnet_id": "subnet-07b5e0a8c48a3db95"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "rtbassoc-0ca027a5f69be437b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:990723917819:security-group/sg-0591b14152e65a965",
            "description": "Security group for Student Registration RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0591b14152e65a965",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MariaDB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Student_registration-rds-sg",
            "name_prefix": "",
            "owner_id": "990723917819",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Student_registration-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Student_registration-rds-sg",
              "Project": "Student_registration"
            },
            "timeouts": null,
            "vpc_id": "vpc-051add420dbcc48ed"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "sg-0591b14152e65a965",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:990723917819:subnet/subnet-04ddab36424be6f1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ddab36424be6f1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "990723917819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Student_registration-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Student_registration-private-1",
              "Project": "Student_registration",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-051add420dbcc48ed"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "subnet-04ddab36424be6f1c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:990723917819:subnet/subnet-0e6488de495c2b949",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6488de495c2b949",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "990723917819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Student_registration-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Student_registration-private-2",
              "Project": "Student_registration",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-051add420dbcc48ed"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "subnet-0e6488de495c2b949",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:990723917819:subnet/subnet-022a9d4961a44bc6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022a9d4961a44bc6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "990723917819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Student_registration-private-3",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Student_registration-private-3",
              "Project": "Student_registration",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-051add420dbcc48ed"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "subnet-022a9d4961a44bc6b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:990723917819:subnet/subnet-0bf7c475744e9acf8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf7c475744e9acf8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "990723917819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Student_registration-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Student_registration-public-1",
              "Project": "Student_registration",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-051add420dbcc48ed"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "subnet-0bf7c475744e9acf8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:990723917819:subnet/subnet-08edc35a1e9c188e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08edc35a1e9c188e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "990723917819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Student_registration-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Student_registration-public-2",
              "Project": "Student_registration",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-051add420dbcc48ed"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "subnet-08edc35a1e9c188e0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:990723917819:subnet/subnet-07b5e0a8c48a3db95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b5e0a8c48a3db95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "990723917819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Student_registration-public-3",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Student_registration-public-3",
              "Project": "Student_registration",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-051add420dbcc48ed"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "subnet-07b5e0a8c48a3db95",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:990723917819:vpc/vpc-051add420dbcc48ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b9ca886354991cf7",
            "default_route_table_id": "rtb-04de5e6d5474d13f0",
            "default_security_group_id": "sg-04451dd923471b0f1",
            "dhcp_options_id": "dopt-04570522bfebccca5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-051add420dbcc48ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04de5e6d5474d13f0",
            "owner_id": "990723917819",
            "region": "ap-south-1",
            "tags": {
              "Name": "Student_registration-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Student_registration-vpc",
              "Project": "Student_registration"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "990723917819",
            "id": "vpc-051add420dbcc48ed",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}